src/styles/main.scss
$text-color: #46433A;
$anchor-text-color: #CE534D;
$background-color: #F1EED9;

body {
	font-family: 'Vollkorn', serif;
	color: $text-color;
	background-color: $background-color;
}

header {
	padding: 0;
	margin: 2.5rem;

}
main {
	padding: 0 2%;
}

/*** wrapper div for both header and main ***/
.wrapper {
	margin-top: 0%;
}

/*** anchor tags ***/
a:link,
a:visited,
a:hover,
a:active {
	color: $anchor-text-color;
	text-decoration: none;
}

a:hover {
	text-decoration: underline;
}

/* markdown unordered lists in main content */
.content ul {
	padding-left: 1.75rem;
	padding-right: 1.75rem;
	margin-right: 0;
}

.content ul ul {
	margin-left: 1.5rem;
	padding-left: 1.25rem;
	padding-right: 0;
	margin-top: 0.35rem;
	list-style-type: circle;
}

.content li > p {
	margin: 0;
}

.content li > ul {
	margin-bottom: 0;
}

.content .text-group {
	background-color: rgba(255, 255, 255, 0.26);
	border: 1px solid rgba(70, 67, 58, 0.18);
	border-left: 3px solid rgba(70, 67, 58, 0.42);
	border-radius: 6px;
	padding: 1rem 1.25rem;
	margin: 1.25rem 0;
}

.content .text-group > :first-child {
	margin-top: 0;
}

.content .text-group > :last-child {
	margin-bottom: 0;
}


/*** main content list ***/
.main-list-item {
	font-weight: bold;
	font-size: 1.2em;
	margin: 0.8em 0;
	display: inline list-item;
	white-space: nowrap;
}

/* override the left margin added by font awesome for the main content list,
since it must be aligned with the content */
.fa-ul.main-list {
	margin-left: 0;
	text-align: center;
}

/* list icons */
.main-list-item-icon {
	position: relative;
	top: -3px;
	left: 3px;
	margin-right: 3px;
	margin-left: 6px;
	color: $text-color;
}

/*** logo ***/
.logo-container {
	text-align: center;
}

.logo {
	width: 300px;
	height: 300px;
	display: inline-block;
	border-radius: 100%;
	-moz-border-radius: 50%;
	border: 2px solid $background-color;
	box-shadow: 0 0 0 3px $text-color;
	background-repeat: no-repeat;
	background-position: center center;
	background-size: auto 300px;
}

/*** author ***/
.author-container h1 {
	font-size: 2.8em;
	margin-top: 0;
	margin-bottom: 0;
	text-align: center;
}

/*** tagline ***/
.tagline-container p {
	font-size: 1.3em;
	text-align: center;
	margin-bottom: 2em;
}

/******/
hr {
	border: 0;
	height: 1px;
	background-image: -webkit-linear-gradient(left, rgba(0,0,0,0), $text-color, rgba(0,0,0,0));
	background-image: -moz-linear-gradient(left, rgba(0,0,0,0), $text-color, rgba(0,0,0,0));
	background-image: -ms-linear-gradient(left, rgba(0,0,0,0), $text-color, rgba(0,0,0,0));
	background-image: -o-linear-gradient(left, rgba(0,0,0,0), $text-color, rgba(0,0,0,0));
}

/*** footer ***/
footer {
	position: relative;
	bottom: 0;
	left: 0;
	text-align: center;
	width: 100%;
	height: 2.5rem;
}

.poweredby {
	font-family: 'Vollkorn', serif;
	font-size: 0.8rem;
}

/*** media queries ***/
/* X-Small devices (phones, 480px and up) */
@media (min-width: 480px) {
	.wrapper {
		width: 480px;
		margin: 10% auto 0 auto;
		position: relative;
		min-height: 80vh;
	}
	header {
		margin: 2.5rem;
	}
}

/* All other devices (768px and up) */
@media (min-width: 800px) {
	.wrapper {
		width: 100%;
		position: relative;
		min-height: 80vh;
		margin: 10% auto 0 auto;
	}

	/* the header column stays left and has a dynamic width with all contents
	aligned right */
	header {
		float: left;
		width: 40%;
		text-align: center;
		margin-left: 2.5rem;
		margin-right: 2.5rem;
		margin-top: 0.5rem;
		margin-bottom: 0.5rem;
	}

	.author-container h1,
	.logo-container,
	.tagline-container p {
		text-align: center;
	}

	main {
		width: 96%;
	}

}

